# anycubic-cloud-manager-v3

./: .gitignore  AGENTS.md  README.md  agent.md  launch_accloud.sh  readme-FR.md  readme.md  start.sh
Docs/: 00_documentation_consolidee_index.md  01_core_web_cloud_sync.md  02_ui_qml.md  03_photon_viewer_formats.md  README.md  core_web.md  core_web_implementation_lots.md  correctif_onglets.md  debug_build_modes.md  docs_checklist.md  docs_unifies_core_web_cloud_sync.md  docs_unifies_readme.md  end_points.md  end_points_v2_verifie.md  endpoints_capture_report.json  endpoints_capture_report.md  endpoints_reference_policy.md  etat_reel_vs_cible.md  har.md  local_cache_sync_strategy.md  logging_reference.md  photon_formats.md  plan_de_correction.md  print_tab_official_logs_snapshot.md  printer_live_remote_print_flow.md  spec_dimplementation_qml.md  structure_application_photons.md  synthese_qml_ui.md  ui_latency_performance_analysis.md  ui_lots_1_5_implementation.md  ui_optimization_continuity.md  ui_spec_cloud_remote_print_visual.md  ui_theme_action_tasks.md  ui_views.md
FR/: 03-runtime-mqtt.md  05-ui-qml.md  07-viewer-photon-formats.md  09-operations-securite.md  10-developpement-codex.md
accloud/: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  accloud_cache.db  vcpkg.json
accloud/app/: App.cpp  AppI18nBridge.cpp  CloudBridge.cpp  CloudBridge.h  CloudFilesModel.cpp  CloudFilesModel.h  LocalCacheStore.cpp  LocalCacheStore.h  LogBridge.cpp  LogBridge.h  LogTailModel.cpp  LogTailModel.h  MqttBridge.cpp  MqttBridge.h  MqttTailModel.cpp  PrintersModel.cpp  PrintersModel.h  RecentJobsModel.cpp  SessionImportBridge.cpp  SessionImportBridge.h  UiSettingsBridge.cpp  main.cpp  resources.qrc  resources_debug.qrc
accloud/app/realtime/: PrinterRealtimeStore.cpp  PrinterRealtimeStore.h
accloud/app/usecases/cloud/: ApplyRealtimeOverlayUseCase.cpp  CheckCloudSessionUseCase.h  LoadCloudFilesUseCase.cpp  LoadPrintersDashboardUseCase.cpp  ResyncCloudStateUseCase.h  SendPrintOrderUseCase.cpp  UploadLocalFileUseCase.cpp
accloud/domain/photons/: PhotonsMeta.h
accloud/domain/realtime/: PrinterRealtimeEvent.h
accloud/i18n/: accloud_en.ts  accloud_fr.ts
accloud/infra/cache/: CacheIndex.cpp  DiskLruCache.cpp  RamWindowCache.cpp
accloud/infra/cloud/: CloudClient.cpp  CloudClient.h  HarImporter.cpp  HarImporter.h  SignHeaders.cpp
accloud/infra/cloud/api/: CloudLegacyImpl.cpp  CloudLegacyImpl.h  DownloadsApi.h  PrintOrderApi.cpp  PrintOrderApi.h  PrintersApi.h  ReasonCatalogApi.cpp  UploadsApi.cpp  UploadsApi.h
accloud/infra/cloud/core/: EndpointRegistry.cpp  EndpointRegistry.h  HttpClient.cpp  ResponseEnvelopeParser.h  SessionProvider.cpp  SessionProvider.h
accloud/infra/config/: AppPaths.h
accloud/infra/debug/: DebugBuild.h
accloud/infra/jobs/: JobManager.cpp  Jobs_Build3D.cpp  Jobs_BuildMasks.cpp  Jobs_Cloud.cpp  Jobs_ExportReport.cpp  Jobs_OpenPhotons.cpp
accloud/infra/logging/: JsonlLogger.cpp  Redactor.cpp  Rotator.cpp
accloud/infra/mqtt/core/: MqttCredentialProvider.cpp  MqttCredentialProvider.h  MqttSessionManager.cpp  MqttSessionManager.h  OpenSslCompat.h  TlsMaterialProvider.cpp  TlsMaterialProvider.h
accloud/infra/mqtt/observability/: MqttTelemetry.cpp  MqttTelemetry.h
accloud/infra/mqtt/routing/: MqttMessageRouter.cpp  MqttTopicBuilder.cpp  MqttTopicBuilder.h
accloud/infra/photons/: PhotonsReader.cpp
accloud/infra/photons/drivers/photons/: PhotonsDriver.cpp
accloud/infra/photons/drivers/photons/preview/: Rgb565Decoder.cpp
accloud/infra/photons/drivers/phz/: PhzDriver.cpp
accloud/infra/photons/drivers/phz/preview/: PhzPreviewDecoder.cpp
accloud/infra/photons/drivers/pwmb/: PwmbDriver.cpp  PwmbSections.cpp  PwmbTables.cpp
accloud/infra/photons/drivers/pwmb/codec/: Pw0Decoder.cpp  PwsDecoder.cpp
accloud/infra/photons/drivers/pwmb/preview/: PreviewDecoder.cpp
accloud/infra/photons/drivers/pws/: PwsDriver.cpp
accloud/infra/photons/drivers/pws/codec/: PwsDecoder.cpp
accloud/infra/photons/drivers/pwsz/: PwszLinesDriver.cpp  PwszSceneDriver.cpp
accloud/packaging/arch/: PKGBUILD
accloud/packaging/flatpak/: README.md
accloud/render3d/gl/: MeshlessVolume.cpp  Renderer.cpp  UploadQueue.cpp
accloud/render3d/qtquick/: QmlGlItem.cpp
accloud/tests/cloud/: test_cloud_core_regressions.cpp  test_har_import.cpp  test_log_bridge.cpp
accloud/tests/mqtt/: test_mqtt_flow.cpp  test_paho_mqttc_live.cpp
accloud/tests/photons/: test_decode_pw0.cpp  test_decode_pws.cpp  test_detect_format.cpp  test_driver_photons.cpp  test_driver_phz.cpp  test_driver_pwmb.cpp  test_driver_pws.cpp  test_driver_pwsz.cpp  test_goldens.cpp
accloud/tests/ui/: tst_ui_main.cpp
accloud/tests/ui/qml/: tst_control_room.qml
accloud/tools/: check_ui_migration.py  collect_endpoint_responses.py  dump_layer_raw.cpp  dump_photons_meta.cpp
accloud/ui/qml/: MainWindow.qml
accloud/ui/qml/components/: AppButton.qml  AppCheckBox.qml  AppComboBox.qml  AppDialogFrame.qml  AppPageFrame.qml  AppTabBar.qml  AppTabButton.qml  BusyOverlay.qml  ErrorBanner.qml  FileCard.qml  InlineStatusBar.qml  ProgressCard.qml  SectionHeader.qml  StatusChip.qml  Theme.js  UploadFileDialog.qml
accloud/ui/qml/dialogs/: PrintDraftDialog.qml  SessionSettingsDialog.qml  UploadDraftDialog.qml  ViewerDraftDialog.qml
accloud/ui/qml/pages/: CloudFileDetailsDialog.qml  CloudFilesPage.qml  CloudFilesTableHeader.qml  CloudFilesTablePanel.qml  CloudFilesTableRow.qml  CloudFilesToolbar.qml  CloudLoginPage.qml  DebugPage.qml  LogPage.qml  MqttPage.qml  PrinterAdvancedPrintConfigDialog.qml  PrinterDetailPanel.qml  PrinterMainPanel.qml  PrinterPage.qml  PrinterRemotePrintConfigDialog.qml  PrinterSelectCloudFileDialog.qml  PrinterToolbar.qml  PrintersTabsBar.qml  SettingsPage.qml  ViewerPage.qml
accloud/ui/qml/panes/: LayerInspectorPane.qml  PreviewPane.qml  Viewer3DPane.qml
docs/: 01-architecture.md  02-cloud-client.md  03-mqtt-runtime.md  04-print-workflow-resin.md  05-ui-qml.md  06-ui-performance.md  07-photon-viewer-formats.md  08-i18n.md  09-operations-security.md  10-development-codex.md  README.md  (+2 more)
(+290 files in other folders)
